// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches enzyme snapshots matches snapshot 1`] = `
<styled.div
  className=""
>
  <styled.a
    key="0"
  >
    <span
      className="flex-row"
    >
      <span
        className="Menu-text"
      >
        test
      </span>
    </span>
  </styled.a>
</styled.div>
`;

exports[`matches test renderer snapshot serializes the styles 1`] = `
<div
  className="sc-bdVaJa Menu kvKKjL"
>
  <a
    className="sc-bwzfXH MenuItem kgLRgS"
  >
    <span
      className="flex-row"
    >
      <span
        className="Menu-text"
      >
        test
      </span>
    </span>
  </a>
</div>
`;
